unvanquished (0.3.5-2) unstable; urgency=low

  * fs_libpath should be in the search path.

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Wed, 02 May 2012 18:20:14 +0100

unvanquished (0.3.5-1) unstable; urgency=low

  * Patch pulled in from the master branch:
    - Walking dretches had footsteps.

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Wed, 02 May 2012 02:49:32 +0100

unvanquished (0.3.5-0) unstable; urgency=low

  * Release of alpha 3.

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Tue, 01 May 2012 20:10:43 +0100

unvanquished (0.3.0-3) unstable; urgency=low

  * Tidy up Build-Depends.
    - Get rid of unneeded dependencies (pulled in by others).
    - Add an alternative, libglew1.6-dev, for Ubuntu users.

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Sun, 15 Apr 2012 14:18:26 +0100

unvanquished (0.3.0-2) unstable; urgency=low

  * Enable fs_libpath and use it.
    This means that the pak?.pk3 symlinks can be dropped, but also means
    that the downloaded files have to be moved.
    *** NOTE: downgrades are NOT supported!
  * Don't load native plugins from the user directory.
  * Fix r_glForceDriver.
  * debian/control: Update source repository location.

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Mon, 09 Apr 2012 11:30:56 +0100

unvanquished (0.3.0-1) unstable; urgency=low

  * Release of alpha 2.
  * Build-depend on nettle-dev & libspeexdsp-dev.
  * Update the menu icon.
  * Fix the launcher scripts where the arch name doesn't match the CPU name.

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Sun, 01 Apr 2012 19:56:35 +0100

unvanquished (0.2.5+git7270e68-4) unstable; urgency=low

  * Build-depend on libpng-dev | libpng12-dev.

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Sat, 24 Mar 2012 23:34:23 +0000

unvanquished (0.2.5+git7270e68-4) unstable; urgency=low

  * Work around lack of jpeg_mem_info() in libjpeg62.

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Tue, 20 Mar 2012 21:17:09 +0000
