@@ -1,0 +1,25 @@
+rotation1
+{
+  Eden-b3
+  arachnid2
+  atcshd
+  atcszalpha-b2
+  bluedragon2_b3
+  citadel
+  cruz-b6
+  karith
+  methane-beta1
+  nano
+  nexus6
+  niveus
+  perseus-b3
+  plat23-b3
+  procyon-r1
+  sirius
+  spacetracks-r1
+  station15-r1
+  transit
+  tremor
+  veddak-final
+  wrecktify_b2
+}
