@@ -1,0 +1,41 @@
+//Example Unvanquished alpha release decicated server config
+
+// Impure for the moment.
+set sv_pure 0
+
+//passwords
+set g_needpass 0
+//set g_password password   //server password
+//set rconPassword password //rcon password
+
+//loading screen
+set sv_hostname "Unvanquished Alpha Server"
+set g_motd "http://unvanquished.net/"
+
+//disallow downloads from the server
+set sv_allowdownload 0
+
+//maximum number of clients
+//greater than 24 is not recommended from a gameplay point of view
+set sv_maxclients 24
+
+//These settings are used on the official Trem 1.2 & Unv public servers
+//after 30 minutes, all build points are removed
+set g_suddenDeathTime 30
+//after 45 minutes, the game will end as a draw
+set timelimit 45
+
+//forces each team to have a similar number of players
+set g_teamForceBalance 1
+
+//following the first map, start this rotation
+set g_initialMapRotation rotation1
+
+//misc settings
+set pmove_fixed     0
+set sv_minRate      5000
+set sv_maxRate      15000
+set sv_minSnaps     10
+
+//start this map first
+map niveus
