@@ -29,10 +29,36 @@ Vcs-Browser: http://github.com/Unvanquished/Unvanquished
 
 Package: unvanquished
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, curl
+Depends: ${shlibs:Depends}, ${misc:Depends}, curl,
+	unvanquished-common (= ${binary:Version})
+Suggests: unvanquished-server
 Description: Team-based FPS game, aliens v. humans
  Build a base, defend it against the other team, gain credits for better
  weapons or more advanced aliens, try to wipe them out.
+
+Package: unvanquished-server
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends},
+	unvanquished-common (= ${binary:Version})
+Suggests: unvanquished
+Conflicts: unvanquished (<< 0.3.5-2)
+Replaces: unvanquished (<< 0.3.5-2)
+Description: Team-based FPS game, aliens v. humans - dedicated server
+ Build a base, defend it against the other team, gain credits for better
+ weapons or more advanced aliens, try to wipe them out.
+ .
+ This package contains the dedicated server for Unvanquished.
+
+Package: unvanquished-common
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Conflicts: unvanquished (<< 0.3.5-2)
+Replaces: unvanquished (<< 0.3.5-2)
+Description: Team-based FPS game, aliens v. humans - shared resources
+ Build a base, defend it against the other team, gain credits for better
+ weapons or more advanced aliens, try to wipe them out.
+ .
+ This package contains resources used by both client and server.
 
 Package: unvanquished-dbg
 Architecture: any
