@@ -30,8 +30,7 @@ override_dh_auto_install:
 
 override_dh_install:
 	dh_install
-	sed -i -e 's/@ARCH@/'${DEB_HOST_GNU_CPU}'/' debian/unvanquished/usr/games/unvanquished*.sh
-	rename 's/\.*$$//' debian/unvanquished/usr/lib/games/unvanquished/daemon*
+	rename "s/daemon/unvanquished/; s%\\.[^./]+$$%%" '{}' ';' debian/unvanquished*/usr/lib/games/unvanquished/daemon*
 
 override_dh_strip:
 	dh_strip --dbg-package=unvanquished-dbg
@@ -49,7 +48,6 @@ override_dh_installemacsen:
 override_dh_installifupdown:
 override_dh_installinfo:
 override_dh_pysupport:
-override_dh_installinit:
 override_dh_installmime:
 override_dh_installmodules:
 override_dh_installlogcheck:
