@@ -1,0 +1,1 @@
+obj-*-*-*/main/qagame*.so		usr/lib/games/unvanquished/main/
