@@ -1,0 +1,86 @@
+#! /bin/sh
+### BEGIN INIT INFO
+# Provides:          unvanquished-server
+# Required-Start:    $remote_fs $network
+# Required-Stop:     $remote_fs $network
+# Default-Start:     2 3 4 5
+# Default-Stop:      0 1 6
+# Short-Description: Start Unvanquished game server
+# Description:       Start Unvanquished game server
+### END INIT INFO
+
+PATH="/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin"
+DAEMON="/usr/games/unvanquished-server.sh"
+NAME="unvanquished-server"
+DESC="Unvanquished dedicated server"
+PIDFILE="/var/run/$NAME.pid"
+BINARY="/usr/lib/games/unvanquished/unvanquishedded"
+
+# Exit cleanly if the package has been removed
+test -x $DAEMON || exit 0
+
+. /lib/lsb/init-functions
+
+# Include unvanquished defaults if available
+if [ -f /etc/default/unvanquished-server ] ; then
+	. /etc/default/unvanquished-server
+fi
+
+unvanquished_start() {
+    if [ -f $PIDFILE ]; then
+        return 2
+    fi
+    if [ "$START_DAEMON" != 1 ]; then
+        echo -n " (not starting - disabled in /etc/default/unvanquished-server)"
+        return 0
+    fi
+    start-stop-daemon --start --quiet --pidfile $PIDFILE --oknodo \
+	--background --exec $BINARY --startas $DAEMON \
+	--make-pidfile --chuid unvanquished-server \
+	-- $DAEMON_OPTS > /dev/null 2>&1 || return 1
+    return 0
+}
+
+unvanquished_stop() {
+    start-stop-daemon --stop --quiet --pidfile $PIDFILE \
+	--oknodo --exec $BINARY || return 1
+    rm -f $PIDFILE
+    return 0
+}
+
+case "$1" in
+    start)
+        log_begin_msg "Starting $DESC: $NAME"
+        unvanquished_start
+        log_end_msg $?
+	;;
+    stop)
+        log_begin_msg "Stopping $DESC: $NAME"
+        unvanquished_stop
+        log_end_msg $?
+	;;
+    #reload)
+	#	If the daemon can reload its config files on the fly
+	#	for example by sending it SIGHUP, do it here.
+	#	If the daemon responds to changes in its config file
+	#	directly anyway, make this a do-nothing entry.
+	# echo "Reloading $DESC configuration files."
+	# start-stop-daemon --stop --signal 1 --quiet --pidfile \
+	#	/var/run/$NAME.pid --exec $DAEMON
+        #;;
+    restart|force-reload)
+	#	If the "reload" option is implemented, move the "force-reload"
+	#	option to the "reload" entry above. If not, "force-reload" is
+	#	just the same as "restart".
+        log_begin_msg "Restarting $DESC: $NAME"
+        unvanquished_stop && sleep 1 && unvanquished_start
+        log_end_msg $?
+	;;
+    *)
+	# echo "Usage: $0 {start|stop|restart|reload|force-reload}" >&2
+	echo "Usage: $0 {start|stop|restart|force-reload}" >&2
+	exit 1
+	;;
+esac
+
+exit 0
