@@ -1,0 +1,3 @@
+debian/unvanquished-server.sh		usr/games/
+obj-*-*-*/daemonded.*			usr/lib/games/unvanquished/
+debian/config/*.cfg                     etc/unvanquished-server
