@@ -1,0 +1,2 @@
+etc/unvanquished-server/server.cfg	usr/lib/games/unvanquished/base/server.cfg
+etc/unvanquished-server/maprotation.cfg	usr/lib/games/unvanquished/base/maprotation.cfg
