@@ -1,0 +1,43 @@
+#!/bin/sh
+# postinst script for unvanquished
+
+set -e
+
+# summary of how this script can be called:
+#        * <postinst> `configure' <most-recently-configured-version>
+#        * <old-postinst> `abort-upgrade' <new version>
+#        * <conflictor's-postinst> `abort-remove' `in-favour' <package>
+#          <new-version>
+#        * <deconfigured's-postinst> `abort-deconfigure' `in-favour'
+#          <failed-install-package> <version> `removing'
+#          <conflicting-package> <version>
+# for details, see http://www.debian.org/doc/debian-policy/ or
+# the debian-policy package
+
+UNV_SERVER_HOME=/var/games/unvanquished-server
+UNV_SERVER_DATA=$UNV_SERVER_HOME/.Unvanquished/main
+
+case "$1" in
+  configure)
+    if ! getent passwd unvanquished-server >/dev/null; then
+      adduser --disabled-password  --quiet --system \
+        --home $UNV_SERVER_HOME --no-create-home \
+        --gecos "Unvanquished dedicated server" --ingroup games unvanquished-server
+    fi
+    install -d /var/games
+    install -d -o unvanquished-server -g games $UNV_SERVER_DATA
+    if ! test -s $UNV_SERVER_DATA/default.cfg; then
+      echo >$UNV_SERVER_DATA/default.cfg
+      chown unvanquished-server:games $UNV_SERVER_DATA/default.cfg
+    fi
+    ln -fs /etc/unvanquished-server/maprotation.cfg /etc/unvanquished-server/server.cfg $UNV_SERVER_DATA/
+  ;;
+  abort-upgrade|abort-remove|abort-deconfigure)
+  ;;
+  *)
+    echo "postinst called with unknown argument \`$1'" >&2
+    exit 1
+  ;;
+esac
+
+#DEBHELPER#
