@@ -1,0 +1,23 @@
+#! /bin/sh
+# prerm script for unvanquished-server
+
+set -e
+
+case "$1" in
+  remove)
+    # Remove links
+    rm -f /usr/lib/games/unvanquished/base/server.cfg /usr/lib/games/unvanquished/base/maprotation.cfg
+    ;;
+
+  upgrade|failed-upgrade|abort-install|abort-upgrade|disappear)
+    ;;
+
+  *)
+    echo "prerm called with unknown argument \`$1'" >&2
+    exit 0
+    ;;
+esac
+
+#DEBHELPER#
+
+exit 0
