@@ -1,6 +1,7 @@
-obj-*-*-*/daemon*			usr/lib/games/unvanquished/
+obj-*-*-*/daemon.*			usr/lib/games/unvanquished/
 obj-*-*-*/*.so				usr/lib/games/unvanquished/
-obj-*-*-*/main/*.so			usr/lib/games/unvanquished/main/
+obj-*-*-*/main/cgame*.so		usr/lib/games/unvanquished/main/
+obj-*-*-*/main/ui*.so			usr/lib/games/unvanquished/main/
 
 #src/gamelogic/base/ui			usr/share/games/unvanquished/base/
 #main					usr/share/games/unvanquished/
@@ -10,7 +11,6 @@ obj-*-*-*/main/*.so			usr/lib/games/unvanquished/main/
 #src/gamelogic/gpp/ui			usr/lib/games/unvanquished/gpp/
 
 debian/unvanquished.sh			usr/games/
-debian/unvanquished-server.sh		usr/games/
 debian/unvanquished-download-paks.sh	usr/sbin/
 download-pk3.sh				usr/lib/games/unvanquished/
 
